--- a/index.html
+++ b/index.html
@@ -2,85 +2,201 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Sudoku 9x9</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    height: 100vh;
-    margin: 0;
-    padding-top: 30px;
-    background: #f0f0f0;
-  }
+  <title>Sudoku Multiplayer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 20px;
+    }
 
-  h1 {
-    margin-bottom: 20px;
-  }
+    h1 {
+      margin-bottom: 10px;
+    }
 
-  .sudoku {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, auto);
-    gap: 0;
-    background: black;
-    border: 3px solid black; /* 🟢 Zewnętrzna gruba ramka */
-    padding: 2px;
-  }
+    select {
+      margin-bottom: 20px;
+      padding: 5px 10px;
+      font-size: 16px;
+    }
 
-  .box {
-    display: grid;
-    grid-template-columns: repeat(3, 40px);
-    grid-template-rows: repeat(3, 40px);
-    gap: 0;
-    background: black;
-    box-sizing: border-box;
-    border: 2px solid black; /* 🟡 Ramka dla każdego z 9 boksów 3x3 */
-  }
+    .sudoku-board {
+      display: grid;
+      grid-template-columns: repeat(9, 40px);
+      grid-template-rows: repeat(9, 40px);
+      border: 2px solid #333;
+    }
 
-  .cell {
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    font-size: 20px;
-    background: white;
-    border: 1px solid black; /* 🔧 Było: #ccc – teraz: czarna ramka */
-    outline: none;
-    box-sizing: border-box;
-  }
+    .cell {
+      width: 40px;
+      height: 40px;
+      text-align: center;
+      font-size: 18px;
+      border: 1px solid #aaa;
+      box-sizing: border-box;
+      background-color: white;
+    }
 
-  .cell:focus {
-    background-color: #eef;
-  }
-</style>
+    .cell.fixed {
+      background-color: #f0f0f0;
+      font-weight: bold;
+      pointer-events: none;
+    }
+
+    .cell:focus {
+      background-color: #e0f7ff;
+    }
+
+    .cell:nth-child(3n+1) {
+      border-left: 2px solid #333;
+    }
+
+    .sudoku-board .cell:nth-child(n+1):nth-child(-n+9),
+    .sudoku-board .cell:nth-child(n+28):nth-child(-n+36),
+    .sudoku-board .cell:nth-child(n+55):nth-child(-n+63) {
+      border-top: 2px solid #333;
+    }
+
+    .cell:nth-child(9n) {
+      border-right: 2px solid #333;
+    }
+
+    .cell:nth-last-child(-n+9) {
+      border-bottom: 2px solid #333;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Sudoku 9x9</h1>
-<div class="sudoku" id="sudoku-board"></div>
+<h1>Sudoku</h1>
+<select id="difficulty">
+  <option value="easy">Łatwy</option>
+  <option value="medium">Średni</option>
+  <option value="hard">Trudny</option>
+  <option value="extreme">Ekstremalny</option>
+</select>
+
+<div class="sudoku-board" id="sudoku-board"></div>
 
 <script>
-  const sudokuBoard = document.getElementById("sudoku-board");
+  const boardElement = document.getElementById("sudoku-board");
+  const difficultySelect = document.getElementById("difficulty");
 
-  for (let b = 0; b < 9; b++) {
-    const box = document.createElement("div");
-    box.className = "box";
+  function createEmptyGrid() {
+    return Array.from({ length: 9 }, () => Array(9).fill(0));
+  }
 
+  function shuffle(array) {
+    for (let i = array.length - 1; i > 0; i--) {
+      const j = Math.floor(Math.random() * (i + 1));
+      [array[i], array[j]] = [array[j], array[i]];
+    }
+    return array;
+  }
+
+  function isValid(grid, row, col, num) {
     for (let i = 0; i < 9; i++) {
-      const input = document.createElement("input");
-      input.type = "text";
-      input.maxLength = 1;
-      input.classList.add("cell");
-      input.oninput = function () {
-        this.value = this.value.replace(/[^1-9]/g, "");
-      };
-      box.appendChild(input);
+      if (grid[row][i] === num || grid[i][col] === num) return false;
     }
 
-    sudokuBoard.appendChild(box);
+    const startRow = row - row % 3;
+    const startCol = col - col % 3;
+    for (let i = 0; i < 3; i++) {
+      for (let j = 0; j < 3; j++) {
+        if (grid[startRow + i][startCol + j] === num) return false;
+      }
+    }
+
+    return true;
   }
+
+  function solve(grid) {
+    for (let row = 0; row < 9; row++) {
+      for (let col = 0; col < 9; col++) {
+        if (grid[row][col] === 0) {
+          for (let num of shuffle([1, 2, 3, 4, 5, 6, 7, 8, 9])) {
+            if (isValid(grid, row, col, num)) {
+              grid[row][col] = num;
+              if (solve(grid)) return true;
+              grid[row][col] = 0;
+            }
+          }
+          return false;
+        }
+      }
+    }
+    return true;
+  }
+
+  function generateFullBoard() {
+    const grid = createEmptyGrid();
+    solve(grid);
+    return grid;
+  }
+
+  function removeCells(grid, difficulty) {
+    const newGrid = grid.map(row => [...row]);
+    let cellsToRemove;
+
+    switch (difficulty) {
+      case 'easy': cellsToRemove = 35; break;
+      case 'medium': cellsToRemove = 45; break;
+      case 'hard': cellsToRemove = 55; break;
+      case 'extreme': cellsToRemove = 60; break;
+    }
+
+    while (cellsToRemove > 0) {
+      const row = Math.floor(Math.random() * 9);
+      const col = Math.floor(Math.random() * 9);
+      if (newGrid[row][col] !== 0) {
+        newGrid[row][col] = 0;
+        cellsToRemove--;
+      }
+    }
+
+    return newGrid;
+  }
+
+  function drawBoard(grid) {
+    boardElement.innerHTML = '';
+    for (let row = 0; row < 9; row++) {
+      for (let col = 0; col < 9; col++) {
+        const cell = document.createElement("input");
+        cell.className = "cell";
+        cell.type = "text";
+        cell.maxLength = 1;
+
+        if (grid[row][col] !== 0) {
+          cell.value = grid[row][col];
+          cell.classList.add("fixed");
+          cell.disabled = true;
+        } else {
+          cell.addEventListener("input", function () {
+            this.value = this.value.replace(/[^1-9]/g, "");
+          });
+        }
+
+        boardElement.appendChild(cell);
+      }
+    }
+  }
+
+  function generateSudoku(difficulty = 'easy') {
+    const fullBoard = generateFullBoard();
+    const puzzle = removeCells(fullBoard, difficulty);
+    drawBoard(puzzle);
+  }
+
+  // Pierwsze uruchomienie
+  generateSudoku('easy');
+
+  // Zmiana poziomu trudności
+  difficultySelect.addEventListener("change", (e) => {
+    generateSudoku(e.target.value);
+  });
 </script>
 
 </body>
